# agent_skills_marketplace

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  README.md  SECURITY.md  VERIFICATION.md  alembic.ini  debug_settings.py  docker-compose.db.yml  docker-compose.yml  home.html  pyproject.toml  render.yaml  verify_vector_search.py  walkthrough.md.resolved
.cursor/: mcp.json
.github/workflows/: ci.yml  security-scan.yml
app/: __init__.py  main.py  seed.py  settings.py
app/api/: admin.py  admin_api_keys.py  admin_quality.py  admin_skills.py  cache_headers.py  deps.py  developer.py  events.py  packs.py  plugins.py  rankings.py  response_cache.py  router.py  skills.py  taxonomy.py
app/cache/: redis_l2.py
app/db/: session.py
app/ingest/: db_upsert.py  http.py  sources.py
docs/: ANALYSIS_REPORT.md  CACHE_STRATEGY.md  DELIVERY_CHECKLIST.md  DEVELOPER_API.md  DEVELOPMENT_PLAN.md  ERD.md  HYBRID_SEARCH.md  PRD.md  PRODUCTS_A.md  PRODUCTS_B.md  PRODUCTS_C.md  PRODUCTS_D.md  PRODUCTS_E.md  PR_EXECUTION_LOG.md  ROLLBACK.md  SEARCH_QUALITY_GATE.md  SKILL_PARSER.md  TRD.md  TRUST_LAYER.md
migrations/: add_pgvector.py  env.py
scripts/: benchmark_search.py  check_delivery_gate.py  monitor_health_24h.py  start.sh  verify_monitor_24h.py
tests/: e2e_verification.py  full_system_test.py  test_api_key_utils.py  test_claude_skill_spec.py  test_redis_l2.py  test_security_scan.py  test_skills_search_logic.py  test_trust_score.py
web/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.tsx
(+99 files in other folders)
